--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro:400" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link rel="shortcut icon" href=".//logo.png" />
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -22,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Token Launcher</title>
+    <title>Shape Launcher</title>
   </head>
   <body>
     <noscript>
